[gd_scene load_steps=10 format=3 uid="uid://b5emf4je4tnag"]

[ext_resource type="PackedScene" path="res://src/Player/PlayerPosition.tscn" id="1"]
[ext_resource type="Script" path="res://src/Levels/RoomAnimations.gd" id="3"]
[ext_resource type="Texture2D" uid="uid://cqif3quqscgjl" path="res://assets/art/background/pixelBackground7.png" id="6"]
[ext_resource type="Texture2D" uid="uid://b8cfr623fwqvh" path="res://assets/art/background/pixelBackground3.png" id="7"]
[ext_resource type="Texture2D" uid="uid://bb754ianhph1u" path="res://assets/art/background/pixelBackground6.png" id="8"]
[ext_resource type="Script" path="res://src/Levels/Room2D.gd" id="15"]

[sub_resource type="Gradient" id="1"]
resource_local_to_scene = true
colors = PackedColorArray(0.971008, 1, 0.851562, 1, 0.238892, 0.751644, 0.804688, 1)

[sub_resource type="GradientTexture2D" id="2"]
resource_local_to_scene = true
gradient = SubResource("1")
width = 516

[sub_resource type="Environment" id="3"]
resource_local_to_scene = true
background_mode = 4
glow_enabled = true
glow_intensity = 0.96
glow_strength = 1.01
glow_bloom = 0.01
glow_blend_mode = 1
glow_hdr_threshold = 0.95
glow_hdr_scale = 0.98
glow_hdr_luminance_cap = 1.0
adjustment_enabled = true
adjustment_contrast = 1.08
adjustment_saturation = 1.01

[node name="Room2D" type="Node2D"]
script = ExtResource("15")

[node name="Portals" type="Node2D" parent="."]

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
layer = -10

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0, 0)
motion_offset = Vector2(-400, -228)

[node name="TextureRect" type="TextureRect" parent="ParallaxBackground/ParallaxLayer"]
offset_left = -2.0
offset_top = 458.0
offset_right = 454.0
offset_bottom = 1270.0
rotation = -89.9999
mouse_filter = 2
texture = SubResource("2")
expand_mode = 1
stretch_mode = 2

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
visible = false
motion_scale = Vector2(0.08, 0)
motion_offset = Vector2(0, -60)
motion_mirroring = Vector2(1024, 512)

[node name="TextureRect" type="TextureRect" parent="ParallaxBackground/ParallaxLayer2"]
modulate = Color(0.447059, 0.270588, 0.270588, 1)
offset_top = -256.0
offset_right = 1024.0
offset_bottom = 260.0
mouse_filter = 2
texture = ExtResource("7")

[node name="ParallaxLayer3" type="ParallaxLayer" parent="ParallaxBackground"]
modulate = Color(0.678431, 0.839216, 0.819608, 1)
motion_scale = Vector2(0.15, 0.15)
motion_offset = Vector2(0, -110)
motion_mirroring = Vector2(1540, 0)

[node name="TextureRect" type="TextureRect" parent="ParallaxBackground/ParallaxLayer3"]
offset_left = 5.3454
offset_top = 5.92419
offset_right = 1545.35
offset_bottom = 521.924
mouse_filter = 2
texture = ExtResource("8")

[node name="ColorRect" type="ColorRect" parent="ParallaxBackground/ParallaxLayer3"]
offset_left = 4.0
offset_top = 259.0
offset_right = 1551.0
offset_bottom = 524.0
mouse_filter = 2
color = Color(0.933333, 0.933333, 0.933333, 1)

[node name="ParallaxLayer4" type="ParallaxLayer" parent="ParallaxBackground"]
modulate = Color(0.454902, 0.678431, 0.654902, 1)
light_mask = -2147483647
motion_scale = Vector2(0.3, 0.3)
motion_offset = Vector2(0, -100)
motion_mirroring = Vector2(2300, 0)

[node name="TextureRect" type="TextureRect" parent="ParallaxBackground/ParallaxLayer4"]
offset_top = -240.0
offset_right = 2176.0
offset_bottom = 784.0
mouse_filter = 2
texture = ExtResource("6")

[node name="ParallaxForeground" type="ParallaxBackground" parent="."]
layer = 10

[node name="ParallaxLayer5" type="ParallaxLayer" parent="ParallaxForeground"]
light_mask = -2147483647
z_index = 21
z_as_relative = false
motion_scale = Vector2(1.2, 1.2)

[node name="Map" type="Node2D" parent="."]
z_as_relative = false

[node name="CanvasModulate" type="CanvasModulate" parent="Map"]
visible = false
z_index = -82
color = Color(0.987793, 0.9375, 1, 1)

[node name="Environment" type="Node2D" parent="."]

[node name="Activables" type="Node2D" parent="Environment"]
z_as_relative = false
position = Vector2(0, -2)

[node name="Balls" type="Node2D" parent="Environment"]

[node name="Baskets" type="Node2D" parent="Environment"]

[node name="Dynamics" type="Node2D" parent="Environment"]
z_index = 2

[node name="Interactive" type="Node2D" parent="Environment"]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("3")

[node name="PlayerPosition" parent="." instance=ExtResource("1")]
position = Vector2(0, -32)

[node name="RoomAnimations" type="AnimationPlayer" parent="."]
script = ExtResource("3")
